syntax = "proto3";

package proto;

option go_package = "./pb";

import "google/protobuf/empty.proto";

service DriverMetadata {
  rpc DirectoryList(DirectoryListRequest) returns (DirectoryListResponse)
}

message File {
  string name = 1;
  string directory = 2;
  string checksum = 3;
  int64 size = 4;
  int64 mtime = 5;
}

message DirectoryListRequest {
  string directory = 1;
}

message DirectoryListResponse {
  string name = 1;
  repeated File files = 2;
}